Adding new clothes

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -321,7 +321,7 @@ QPushButton:pressed {
      </widget>
     </item>
     <item row="1" column="0">
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="pb_addclothing">
       <property name="font">
        <font>
         <family>Century Gothic</family>
